[gd_scene load_steps=22 format=2]

[ext_resource path="res://InteractivePiece/_Master/InteractivePiece.tscn" type="PackedScene" id=1]
[ext_resource path="res://InteractivePiece/Balls/Resource/PlayerBall.gd" type="Script" id=2]
[ext_resource path="res://InteractivePiece/Balls/Resource/Trail.gd" type="Script" id=3]
[ext_resource path="res://Resources/Shaders/TeleportEffect.tres" type="Material" id=4]
[ext_resource path="res://Resources/Shaders/FlameEffect.material" type="Material" id=5]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0
bounce = 0.2

[sub_resource type="Gradient" id=16]

[sub_resource type="GradientTexture2D" id=15]
gradient = SubResource( 16 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 0.333333, 0.333333, 0.333333, 1 )

[sub_resource type="Animation" id=4]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:mode")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Live"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 2.03636, 0, 0, Vector2( 0.992857, 1 ), 1.1753e-07, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.110092, 0.486239, 0.917431 )
colors = PoolColorArray( 1, 1, 1, 0.478431, 0.469626, 1, 1, 0.755058, 0.146789, 1, 1, 0.92344, 0, 1, 1, 1 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.635294, 1 )
colors = PoolColorArray( 0, 1, 1, 1, 0, 0.0823529, 1, 1, 0, 0.0823529, 1, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.75
color_ramp = SubResource( 11 )

[sub_resource type="Gradient" id=13]
interpolation_mode = 1
colors = PoolColorArray( 0.933333, 0.933333, 0.933333, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=14]
flags = 0
gradient = SubResource( 13 )
width = 1024
height = 1024
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.475, 0.475 )

[node name="PlayerBall" groups=["Ball"] instance=ExtResource( 1 )]
material = ExtResource( 4 )
collision_layer = 5
collision_mask = 0
mode = 3
mass = 2.4
physics_material_override = SubResource( 6 )
gravity_scale = 5.0
continuous_cd = 2
can_sleep = false
linear_damp = 0.05
script = ExtResource( 2 )
targetPos = Vector2( 0, 0 )
size = 1.0
BaseDamage = 3.0

[node name="PowerUp" type="Sprite" parent="." index="0"]
visible = false
modulate = Color( 1, 1, 1, 0.145098 )
light_mask = 2
material = ExtResource( 5 )
scale = Vector2( 1.25, 1.25 )
texture = SubResource( 15 )

[node name="Collision" parent="." index="1"]
visible = false
polygon = PoolVector2Array( 0, 24, 4.57942, 23.5591, 8.99056, 22.2524, 13.0713, 20.1281, 16.6718, 17.2642, 19.6596, 13.7658, 21.9251, 9.76168, 23.3849, 5.39883, 23.9854, 0.837588, 23.7045, -3.75443, 22.5526, -8.20848, 20.572, -12.3609, 17.8355, -16.0591, 14.4436, -19.1673, 10.5209, -21.5711, 6.21166, -23.1822, 1.67416, -23.9415, -2.92486, -23.8211, -7.41641, -22.8254, -11.6354, -20.9909, -15.4269, -18.3851, -18.6515, -15.1037, -21.1907, -11.2673, -22.9513, -7.01692, -23.8685, -2.50868, -23.9087, 2.09174, -23.0703, 6.6153, -21.3842, 10.8958, -18.9123, 14.7759, -15.7454, 18.113, -12, 20.7846, -7.81364, 22.6924, -3.34015, 23.7664 )

[node name="Bezier" parent="." index="2"]
curve = SubResource( 3 )
radius = 24
sides = 32

[node name="Sprite" parent="." index="3"]
use_parent_material = true

[node name="Shape" parent="Sprite" index="0"]
modulate = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
use_parent_material = true
texture = SubResource( 8 )
texture_offset = Vector2( 100, 100 )
polygon = PoolVector2Array( 0, 24, 4.57942, 23.5591, 8.99056, 22.2524, 13.0713, 20.1281, 16.6718, 17.2642, 19.6596, 13.7658, 21.9251, 9.76168, 23.3849, 5.39883, 23.9854, 0.837588, 23.7045, -3.75443, 22.5526, -8.20848, 20.572, -12.3609, 17.8355, -16.0591, 14.4436, -19.1673, 10.5209, -21.5711, 6.21166, -23.1822, 1.67416, -23.9415, -2.92486, -23.8211, -7.41641, -22.8254, -11.6354, -20.9909, -15.4269, -18.3851, -18.6515, -15.1037, -21.1907, -11.2673, -22.9513, -7.01692, -23.8685, -2.50868, -23.9087, 2.09174, -23.0703, 6.6153, -21.3842, 10.8958, -18.9123, 14.7759, -15.7454, 18.113, -12, 20.7846, -7.81364, 22.6924, -3.34015, 23.7664 )

[node name="Design" parent="Sprite" index="1"]
light_mask = 1
use_parent_material = true
texture_offset = Vector2( 100, 100 )
polygon = PoolVector2Array(  )

[node name="Outline" parent="Sprite" index="2"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
light_mask = 4
use_parent_material = true
points = PoolVector2Array( 0, 16, 3.05294, 15.706, 5.99371, 14.8349, 8.71422, 13.4187, 11.1145, 11.5094, 13.1064, 9.17722, 14.6167, 6.50779, 15.5899, 3.59922, 15.9903, 0.558392, 15.803, -2.50295, 15.0351, -5.47232, 13.7147, -8.24061, 11.8903, -10.7061, 9.62904, -12.7782, 7.01394, -14.3807, 4.1411, -15.4548, 1.1161, -15.961, -1.94991, -15.8807, -4.94427, -15.2169, -7.75695, -13.9939, -10.2846, -12.2567, -12.4343, -10.0691, -14.1272, -7.51155, -15.3009, -4.67795, -15.9124, -1.67246, -15.9391, 1.39449, -15.3802, 4.4102, -14.2561, 7.26385, -12.6082, 9.85058, -10.4969, 12.0754, -8, 13.8564, -5.20909, 15.1283, -2.22677, 15.8443, 0, 16 )
width = 8.0
gradient = SubResource( 9 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 1

[node name="AnimationPlayer" parent="." index="4"]
anims/Die = SubResource( 4 )
anims/Live = SubResource( 5 )

[node name="Trail" type="Line2D" parent="." index="5"]
modulate = Color( 0.698039, 0.698039, 0.698039, 1 )
light_mask = 2
z_index = -1
width = 32.0
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 0 )
gradient = SubResource( 2 )
texture_mode = 2
joint_mode = 2
end_cap_mode = 2
sharp_limit = 0.0
round_precision = 32
antialiased = true
script = ExtResource( 3 )
targetPath = NodePath("..")
length = 25

[node name="BugTimer" type="Timer" parent="." index="6"]
wait_time = 3.5
one_shot = true

[node name="NudgeEffect" type="Particles2D" parent="." index="7"]
z_index = -1
emitting = false
amount = 16
lifetime = 0.25
one_shot = true
fixed_fps = 45
visibility_rect = Rect2( -32, -32, 64, 64 )
local_coords = false
draw_order = 1
process_material = SubResource( 12 )
texture = SubResource( 14 )

[connection signal="body_entered" from="." to="." method="_on_PlayerBall_body_entered"]
[connection signal="timeout" from="BugTimer" to="." method="_on_BugTimer_timeout"]
